force-app/main/form-builder/objects/Question_Catalog__c/Question_Catalog__c.object-meta.xml
<CustomObject>
    <label>Question Catalog</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Question Catalog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>