force-app/main/form-builder/objects/Question_Catalog__c/fields/Answer_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Answer_Data_Type__c</fullName>
    <description>Type of answer</description>
    <label>Answer Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Date Time</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Radio Buttons</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Display Text</fullName>
            </value>
            <value>
                <fullName>Multi-Select Checkbox</fullName>
            </value>
            <value>
                <fullName>Multi-Select Picklist</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>