force-app/main/form-builder/objects/Question_Catalog__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field to which the answer should be mapped</description>
    <label>Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>