force-app/main/form-builder/objects/Question_Catalog__c/fields/Form_Definition__c.field-meta.xml
<CustomField>
    <fullName>Form_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Form Definition</label>
    <referenceTo>Form_Definition__c</referenceTo>
    <relationshipLabel>Question Catalogs</relationshipLabel>
    <relationshipName>Question_Catalogs</relationshipName>
    <type>Lookup</type>
</CustomField>