force-app/main/form-builder/objects/Question_Catalog__c/fields/Form_Section__c.field-meta.xml
<CustomField>
    <fullName>Form_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Section</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Form_Section__c.Form_Definition__c</field>
            <operation>equals</operation>
            <valueField>$Source.Form_Definition__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Form_Section__c</referenceTo>
    <relationshipLabel>Question Catalogs</relationshipLabel>
    <relationshipName>Question_Catalogs</relationshipName>
    <type>Lookup</type>
</CustomField>