force-app/main/form-builder/objects/Question_Catalog__c/fields/Group_By__c.field-meta.xml
<CustomField>
    <fullName>Group_By__c</fullName>
    <description
  >Use this field to group questions together. Questions with the same value will be displayed in the same group. If questions are numeric, currency, or percentage types, their values will be summed at the bottom of the group.</description>
    <label>Group By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>