force-app/main/form-builder/objects/Question_Catalog__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Object to which the answer should be mapped</description>
    <label>Object</label>
    <length>200</length>
    <type>Text</type>
</CustomField>