force-app/main/form-builder/objects/Question_Catalog__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <description
  >Will hold the possible values of the answers to picklist in the form</description>
    <inlineHelpText
  >Add all the picklist values separated by semicolons.</inlineHelpText>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>