force-app/main/form-builder/objects/Question_Catalog__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description
  >This field will contain the text that will be shown on forms as questions.</description>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>