force-app/main/form-builder/objects/Question_Catalog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Order__c</columns>
    <columns>Question__c</columns>
    <columns>Object__c</columns>
    <columns>Field__c</columns>
    <columns>Answer_Data_Type__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>